# Client-Server-Architecture

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Pipeline.cmake  README.md  docker-compose.sonarqube.yaml  docker-compose.yaml  dummy.c  my_qa_reports.sh  sonar-project.properties
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/actions/test_and_coverage/: action.yml
.github/workflows/: ci-full-check.yml
client_only_build/: CMakeLists.txt  CmakeLists.txt
deploy/: server.service
docs/: REPORT.md  SRS_Logistics_Specification.md
etc/: config.yaml
include/: dummy.h
include/client/: client.h  client_context.h  input_handler.h  ipc_handler.h  logger.h  output_handler.h  session_handler.h  transport.h  udp_handler.h
include/server/: alertManager.hpp  argsParser.hpp  authenticator.hpp  clientSession.hpp  clock.hpp  commandProcessor.hpp  config.hpp  configValidator.hpp  eventQueue.hpp  inventory.hpp  ipcHandler.hpp  logger.hpp  server.hpp  sessionManager.hpp  storage.hpp  threadPool.hpp  trafficReporter.hpp  udpHandler.hpp
monitoring/: prometheus.docker.yml  prometheus.local.yml
scripts/: backup.py  dashboard.py  dedicated_user_service.sh  my_qa_reports.sh  sensor_simulator.py
src/: dummy.c  main.c
src/client/: client.c  client_context.c  input_handler.c  ipc_handler.c  logger.c  main.c  output_handler.c  session_handler.c  transport.c  udp_handler.c
src/server/: alertManager.cpp  argsParser.cpp  authenticator.cpp  clientSession.cpp  commandProcessor.cpp  config.cpp  configValidator.cpp  eventQueue.cpp  inventory.cpp  ipcHandler.cpp  logger.cpp  main.cpp  server.cpp  sessionManager.cpp  storage.cpp  threadPool.cpp  trafficReporter.cpp  udpHandler.cpp
tests/: CMakeLists.txt  test_IPCHandler.cpp  test_alertManager.cpp  test_args_parser.cpp  test_authenticator.cpp  test_clientSession.cpp  test_client_logic.c  test_commandProcessor.cpp  test_config.cpp  test_configValidator.cpp  test_dummy.c  test_eventqueue.cpp  test_helper.hpp  test_input_handler.c  test_inventory.cpp  test_ipc_handler.c  test_logger.c  test_logger.cpp  test_output_handler.c  test_runner.cpp  test_server_logic.cpp  test_sessionManager.cpp  test_session_handler.c  test_storage.cpp  test_threadPool.cpp  test_trafficReporter.cpp
